Fix searchbox on Firefox occupying entire navbar

--- a/src/components/SearchBar/SearchBar.css
+++ b/src/components/SearchBar/SearchBar.css
@@ -18,6 +18,7 @@
 
 .search-button--icon {
   height: 100%;
+  width: unset;
 
   margin-right: 0.5em;
 }
@@ -64,6 +65,7 @@
 
 .search-header .search-icon {
   height: 2em;
+  width: unset;
   margin-right: 1em;
 
   color: var(--textColor);
